--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -3,7 +3,7 @@
 
 <ng-container *ngIf="loading; else elseTemplate">
   <div class="loading-indicator">
-    <mat-progress-spinner mode="indeterminate" color="accent"></mat-progress-spinner>
+    <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
   </div>
 </ng-container>
 <ng-template #elseTemplate>
